deploy/network-policy/dify/shared/allow-to-api-server-all-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-workloads-to-apiserver
  namespace: dev-dify
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 10.152.183.0/24
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 10.1.0.0/16
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 10.10.0.0/24
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443

---
