deploy/network-policy/dify/shared/allow-to-database-all-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-workloads-to-database
  namespace: dev-dify
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-redis
    ports:
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 26379
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-postgresql
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-qdrant
    ports:
    - protocol: TCP
      port: 6333
    - protocol: TCP
      port: 6334
