deploy/network-policy/dify/shared/allow-to-extra-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-workloads-to-minio
  namespace: dev-dify
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9001

---
