deploy/network-policy/dify/shared/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev-dify
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
